--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,47 @@
+html,
 body {
+    font-family: Arial, sans-serif;
     margin: 0;
+    padding: 0;
+}
+
+.container {
+    height: 100vh;
+    position: relative;
+}
+
+input {
+    font-size: 12px;
+}
+
+h1 {
+    color: #525454;
+    font-size: 22px;
+    margin: 0 0 10px 0;
+    text-align: center;
+}
+
+#hide-listings,
+#show-listings {
+    width: 48%;
 }
 
 #map {
-    width: 100%;
-    height: 100vh;
+    bottom: 0px;
+    height: 100%;
+    left: 362px;
+    position: absolute;
+    right: 0px;
+}
+
+.options-box {
+    box-sizing: border-box;
+    background: #fff;
+    border: 1px solid #999;
+    border-radius: 3px;
+    width: 362px;
+    height: 100%;
+    line-height: 35px;
+    padding: 10px 10px 30px 10px;
+    text-align: left;
 }
