--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,13 @@
 html,
 body {
     font-family: Arial, sans-serif;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
 
 .container {
-    height: 100vh;
+    height: 100%;
     position: relative;
 }
 
@@ -26,6 +27,13 @@ h1 {
     width: 48%;
 }
 
+hr {
+    background: #D0D7D9;
+    height: 1px;
+    margin: 20px 0 20px 0;
+    border: none;
+}
+
 #map {
     bottom: 0px;
     height: 100%;
@@ -35,13 +43,21 @@ h1 {
 }
 
 .options-box {
-    box-sizing: border-box;
     background: #fff;
     border: 1px solid #999;
     border-radius: 3px;
-    width: 362px;
     height: 100%;
     line-height: 35px;
     padding: 10px 10px 30px 10px;
     text-align: left;
+    width: 340px;
+}
+
+#pano {
+    width: 200px;
+    height: 200px;
+}
+
+.text {
+    font-size: 12px;
 }
