--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,3 +45,12 @@ h1 {
     padding: 10px 10px 30px 10px;
     text-align: left;
 }
+
+#pano {
+    width: 200px;
+    height: 200px;
+}
+
+.text {
+    font-size: 12px;
+}
